<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ReadingsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F8F8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F0F0F0"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="🪴 Sensor Ab"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/bg_edittext_rounded"
                android:backgroundTint="@color/green"
                android:backgroundTintMode="screen"
                android:paddingHorizontal="10dp"
                android:paddingVertical="2dp"
                android:text="Active"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
                app:layout_constraintStart_toEndOf="@+id/tvTitle"
                app:layout_constraintTop_toTopOf="@+id/tvTitle" />

            <LinearLayout
                android:id="@+id/cardTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="2dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tvTitle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#F8F8F8"
                    android:padding="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/temperature"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:drawableStart="@drawable/temperature"
                            android:drawablePadding="8dp"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature_is_essencial_for_the_plant_growth"
                        android:textSize="12sp"
                        android:layout_marginTop="4dp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <TextView
                            android:id="@+id/tvTempMin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0°C"
                            android:textSize="10sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvTempMax"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="40°C"
                            android:textSize="10sp"
                            android:textStyle="bold" />

                        <ProgressBar
                            android:id="@+id/tempProgressBar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="12dp"
                            android:layout_below="@id/tvTempMin"
                            android:layout_marginTop="4dp"
                            android:max="40"
                            android:progress="20"/>

                    </RelativeLayout>
                    <TextView
                        android:id="@+id/resume_temp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="#F0F0F0"
                        android:padding="12dp"
                        android:text="Right now, the temperature on your plants is 70%, it means 'Medium'."
                        android:textSize="13sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:background="#F8F8F8">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/soil"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:drawableStart="@drawable/plant"
                            android:drawablePadding="8dp"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/the_basics_of_soil_preparatio_is_essensial_to_gardening"
                        android:textSize="12sp"
                        android:layout_marginTop="4dp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <TextView
                            android:id="@+id/tvSoilMin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1 pH"
                            android:textSize="10sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvSoilMax"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="14 pH"
                            android:textSize="10sp"
                            android:textStyle="bold" />

                        <ProgressBar
                            android:id="@+id/soilProgressBar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="12dp"
                            android:layout_below="@id/tvSoilMin"
                            android:layout_marginTop="4dp"
                            android:max="14"
                            android:progress="7"/>

                    </RelativeLayout>
                    <TextView
                        android:id="@+id/resume_soil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="#F0F0F0"
                        android:padding="12dp"
                        android:text="Right now, the soil pH of your plants is 6.4 to 6.8 pH, it means 'Neutral'. It could affect the Soil Moisture."
                        android:textSize="13sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:background="#F8F8F8">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/plant"
                            android:drawablePadding="8dp"
                            android:text="@string/sunlight"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/providing_plants_with_the_adequate_amount_of_sunlight_is_the_key"
                        android:textSize="12sp"
                        android:layout_marginTop="4dp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <TextView
                            android:id="@+id/tvSunlightMin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0%"
                            android:textSize="10sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvSunlightMax"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="100%"
                            android:textSize="10sp"
                            android:textStyle="bold" />

                        <ProgressBar
                            android:id="@+id/sunlightProgressBar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="12dp"
                            android:layout_below="@id/tvSunlightMin"
                            android:layout_marginTop="4dp"
                            android:max="100"
                            android:progress="60"/>

                    </RelativeLayout>
                    <TextView
                        android:id="@+id/resume_sunlight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="#F0F0F0"
                        android:padding="12dp"
                        android:text="Right now, the sunlight intensity on your plants is 70%, it means 'Medium Light'."
                        android:textSize="13sp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</FrameLayout>